# masscalc

./: .gitignore  CMakeLists.txt  conanfile.py
example/: CMakeLists.txt  main.cpp
include/metadata/: meta.hpp.in
src/: CMakeLists.txt
